[tool.poetry]
name = "cusser"
version = "0.1.0"
description = "A curses wrapper that understands ANSI escape code sequences"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
stransi = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
bandit = "^1.7.1"
flake8 = "^4.0.1"
black = {version = "^21.11b1", allow-prereleases = true}
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
